<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.TMTBInformationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9031" />

    <Button
        android:id="@+id/buttonSampleB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Iniciar exemplo"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline76"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline75" />

    <Button
        android:id="@+id/buttonBackHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#CE4336"
        android:text="Cancelar"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline76"
        app:layout_constraintEnd_toStartOf="@+id/guideline73"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="Sobre TMT-B"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_tmtb"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"

        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_tmtb_part2"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"

        app:layout_constraintBottom_toTopOf="@+id/guideline68"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline67" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_tmtb_part3"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"

        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline69" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tmt_a_exemplo"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06015625 " />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15390626" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25390625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.265625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44453126" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.456" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.572" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.581" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6525625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>